2002-10-02  Francois Dechelle  <dechelle@limbe.ircam.fr>

	* removed definitively metaclasses.
	* remove fts_object_new_to_patcher. Now, only 2 functions to create an object:
	fts_object_create and fts_eval_object_description

2002-10-02  Norbert Schnell  <schnell@ligeti.ircam.fr>

	* removed properties related to the DSP subsystem
	* introduced fts_dsp_object_t as base structure for all DSP objects
	* changed API for DSP objects: fts_dsp_object_init(), fts_dsp_object_delete(), ...
	* adapted object set to DSP API changes

2002-09-30  Francois Dechelle  <dechelle@limbe.ircam.fr>

	* changed bmax file magic number. It is now bMa2 (was bMax) and the 
	version number is passed to the loader. This is necessary for compatibility
	w.r.t. 2 things:
	 - the : is now part of the object description and is saved (it is skipped
	in the display of the object description)
	 - the variables that will be defined by a "define" object
	bMa2 files will not be loadable by jMax version 3.x or before. bMax files can
	be loaded inside jMax 4 and a compatibility layer handles conversion of the
	object description.

2002-09-26  Norbert Schnell  <schnell@ligeti.ircam.fr>

	* reimplemented fts message system (API to be documented)...
	* adapted object set to new API

2002-09-25  Francois Dechelle  <dechelle@limbe.ircam.fr>

	* added parsing of object expressions to the expression parser/evaluator.
	Reimplemented fts_eval_object_description using this parser.
	* remove fts_object_blip
	* templates are not supported yet, but will be back soon

2002-09-21  Norbert Schnell  <schnell@ligeti.ircam.fr>

	* introduced variable number of in/outlets for objects
	* reimplemented message dispatching using a hashtable per inlet (to be changed!!)
	* removed metaclasses from entire object set
	* reimplemented in/outlets of patchers
	* reimplemented send/receive (== inlet/outlet) as a generic mechanism

2002-09-13  Norbert Schnell  <schnell@ligeti.ircam.fr>
