@@ -47,7 +47,7 @@
 #include <fts/fts.h>
 #include <ftsprivate/parser.h>
 
-#define YYDEBUG 1
+/*#define YYDEBUG 1*/
 
 #ifndef STANDALONE
 #define free fts_free
