@@ -25,11 +25,12 @@
 
 typedef struct
 {
-  fts_objectlist_t *listeners;
+  fts_atom_t value;
+  fts_objectlist_t listeners;
 } fts_definition_t;
 
-FTS_API fts_definition_t *fts_definition_get(fts_patcher_t *patcher, fts_symbol_t name);
-FTS_API void fts_definition_add_listener(fts_definition_t *def, fts_object_t *obj);
-FTS_API void fts_definition_remove_listener(fts_definition_t *def, fts_object_t *obj);
+extern fts_definition_t *fts_definition_get(fts_patcher_t *patcher, fts_symbol_t name);
+extern void fts_definition_add_listener(fts_definition_t *def, fts_object_t *obj);
+extern void fts_definition_remove_listener(fts_definition_t *def, fts_object_t *obj);
 
 #endif
